Pendiente terminar creacion clientes.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,3 +25,8 @@ validation.login=Ya existe un usuario con ese login.
 validation.password.politica=La contraseña debe tener una longitud de entre 8 y 16 caracteres, incluyendo al menos una letra minúscula, una mayúscula y un número.
 validation.password.no-iguales=Las contraseñas no coinciden.
 validation.password.no-calidad=La contraseña no cumple con la política de calidad de contraseñas.
+
+# -----------------------------------------------------------------------------
+# Mensaje creación de usuarios
+# -----------------------------------------------------------------------------
+creacion.usuario.cliente=El usuario se ha creado correctamente. Inicie sesión para acceder a todas las funcionalidades. 
